
syntax = "proto3";

package backup;

option go_package = "chatParser.backup.v1;backupv1";

service Backup {
  rpc ExportToFile (ExportToFileRequest) returns (ExportToFileResponse);
}

message ExportToFileRequest {
  ExportType type = 1;
  string exportDir = 2;
}

message ExportToFileResponse {
  bool isSuccess = 1;
}

enum ExportType{
  CSV = 0;
  PARQUET = 1;
}